# harmonia

./: CHANGELOG.md  Cargo.toml  README.md  TEST-PLAN.md
.github/workflows/: docs.yml  integration-tests.yml  release.yml
examples/lua-shared-memory/: .gitignore  Makefile  README.md  clock.c  demo.lua  harmonia.c
examples/lua-unix-socket/: .gitignore  Makefile  demo.lua  harmonia.c
harmonia2/: .gitignore  README.md  nob.c  pipewire_midi_demo.c
public/: index.css  index.html  index.js
src/: audio_engine.rs  block.rs  build.rs  handlers.rs  harmonia.rs  linky_groups.rs  linky_start.rs  main.rs  net.rs  playground.rs  public.rs  version.rs
tests/: A1.mid  A2.mid  A3.mid  A4.mid  README  integration.py
uam/: README.md  architecture.adoc
