[package]
name = "harmonia"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["ws", "headers"] }
headers = "0.3.9"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
