[package]
name = "harmonia"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"
default-run = "harmonia"

[[bin]]
name = "harmonia"
test = false
bench = false
path = "src/harmonia.rs"

[[bin]]
name = "linky_start"
test = false
bench = false
path = "src/playground.rs"

[lib]
name = "linky_start"
crate-type = ["lib"]
test = true
bench = false
path = "src/linky_start.rs"

[dependencies]
axum = { version = "0.6.20", features = ["ws", "headers", "multipart", "macros"] }
base64ct = { version = "1.6.0", features = ["std"] }
headers = "0.3.9"
hex = "0.4.3"
maud = { version = "0.25.0", features = ["axum"] }
midir = "0.9.1"
midly = "0.5.3"
open = "5.0.0"
serde = { version = "1.0.188", features = ["derive"] }
sha1 = "0.10.6"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rusty_link = "0.4.1"
local-ip-address = "0.5.6"
build-time = "0.1.3"
bson = "2.7.0"
anyhow = "1.0.75"
dirs = "5.0.1"
socket2 = { version = "0.5.5", features = ["all"] }

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
