[package]
name = "harmonia"
version = "0.1.1"
edition = "2021"
build = "src/build.rs"
default-run = "harmonia"
authors = ["Robert Bendun <robert@bendun.cc>"]
license-file = "LICENSE"
description = "Synchronized MIDI and audio player for laptop orchestra"

[[bin]]
name = "harmonia"
test = false
bench = false
path = "src/harmonia.rs"

[[bin]]
name = "linky_groups"
test = false
bench = false
path = "src/playground.rs"

[lib]
name = "linky_groups"
crate-type = ["lib"]
test = true
bench = false
path = "src/linky_groups.rs"

[dependencies]
axum = { version = "0.6.20", features = ["ws", "headers", "multipart", "macros"] }
base64ct = { version = "1.6.0", features = ["std"] }
headers = "0.3.9"
hex = "0.4.3"
maud = { version = "0.25.0", features = ["axum"] }
midir = "0.9.1"
midly = "0.5.3"
open = "5.0.0"
serde = { version = "1.0.188", features = ["derive"] }
sha1 = "0.10.6"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "signal", "net", "time", "macros", "sync"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
local-ip-address = "0.5.6"
build-time = "0.1.3"
bson = "2.7.0"
anyhow = "1.0.75"
dirs = "5.0.1"
clap = { version = "4.5.3", features = ["derive", "string"] }
gethostname = "0.4.3"
chrono = "0.4.35"
tokio-util = { version = "0.7.10", features = ["net", "codec"] }
bincode = "1.3.3"
socket2 = "0.5.6"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
rust-embed = "8.3.0"
mime_guess = "2.0.4"
tracing-appender = "0.2.3"

[dependencies.rusty_link]
git = "https://github.com/RobertBendun/rusty_link.git"
branch = "harmonia/main"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
